--- a/indexer/Cargo.toml
+++ b/indexer/Cargo.toml
@@ -8,6 +8,10 @@ repository.workspace = true
 
 [dependencies]
 clap = { workspace = true, features = ["derive"] }
+futures-util.workspace = true
+parity-scale-codec = { workspace = true, features = ["derive"] }
+scale-encode.workspace = true
+scale-decode.workspace = true
 serde = { workspace = true, features = ["derive"] }
 shared.workspace = true
 subxt = { workspace = true, features = ["native", "jsonrpsee", "reconnecting-rpc-client"] }
@@ -16,6 +20,9 @@ tracing-subscriber.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["full"] }
 toml.workspace = true
+
+[dev-dependencies]
+hex-literal.workspace = true
 
 [lints]
 workspace = true
