--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ shared = { path = "shared" }
 slack-morphism = "2.16.0"
 sp-blockchain = "42.0.0"
 sp-core = "39.0.0"
+sp-crypto-hashing = "0.1.0"
 sp-runtime = "44.0.0"
 substrate-p2p = { git = "https://github.com/vedhavyas/substrate-p2p", rev = "85ae0388b1f080d2c282e2d9f7a5322656753845" }
 subxt = { version = "0.44.0", default-features = false }
