--- a/indexer/Cargo.toml
+++ b/indexer/Cargo.toml
@@ -7,7 +7,7 @@ homepage.workspace = true
 repository.workspace = true
 
 [dependencies]
-clap = { workspace = true, features = ["derive"] }
+clap = { workspace = true, features = ["derive", "env"] }
 futures-util.workspace = true
 parity-scale-codec = { workspace = true, features = ["derive"] }
 scale-encode.workspace = true
