--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -46,6 +46,39 @@ jobs:
       - name: cargo clippy
         run: |
           cargo clippy --release --locked --all-features --all-targets -- -D warnings
+  cargo-test:
+    name: cargo-test
+    runs-on: ubuntu-latest
+    # Don't use the full 6 hours if a test hangs
+    timeout-minutes: 120
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+
+      - name: Install cargo-nextest
+        uses: taiki-e/install-action@21517c4e721ab8b872d9b8e90828e584dcabe8e2 # 2.56.3
+        with:
+          tool: cargo-nextest
+
+      - name: Configure source deps cache
+        uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
+        with:
+          path: |
+            ~/.cargo/registry/index
+            ~/.cargo/registry/cache
+            ~/.cargo/git/db
+          key: ${{ runner.os }}-cargo-${{ hashFiles('./Cargo.toml') }}
+
+      - name: Install postgres
+        run: sudo apt-get install postgresql postgresql-client
+
+      - name: Update path
+        run: find /usr/lib/postgresql/ -type d -name "bin" >> $GITHUB_PATH
+
+      - name: cargo nextest run --locked
+        run: |
+          cargo -Zgitoxide -Zgit nextest run --locked
 
   rust-all:
     # Hack for buggy GitHub Actions behavior with skipped checks:
@@ -55,6 +88,7 @@ jobs:
     needs:
       - cargo-fmt
       - cargo-clippy
+      - cargo-test
     steps:
       - name: Check job statuses
         # Another hack is to actually check the status of the dependencies or else it'll fall through
@@ -62,3 +96,4 @@ jobs:
           echo "Checking statuses..."
           [[ "${{ needs.cargo-fmt.result }}" == "success" ]] || exit 1
           [[ "${{ needs.cargo-clippy.result }}" == "success" ]] || exit 1
+          [[ "${{ needs.cargo-test.result }}" == "success" ]] || exit 1
