--- a/indexer/Cargo.toml
+++ b/indexer/Cargo.toml
@@ -9,6 +9,7 @@ repository.workspace = true
 [dependencies]
 actix-web.workspace = true
 actix-cors.workspace = true
+chrono = { workspace = true, features = ["serde"] }
 clap = { workspace = true, features = ["derive", "env"] }
 futures-util.workspace = true
 parity-scale-codec = { workspace = true, features = ["derive"] }
